[workspace]
members = [
    "veil-crypto",      # Pure Rust crypto library
    "veil-wasm",        # WASM bindings
]
resolver = "2"

[workspace.package]
version = "1.1.1"
edition = "2021"
authors = ["Veil Project", "blondfrogs"]
license = "MIT"
repository = "https://github.com/blondfrogs/veil-secp256k1-wasm"
homepage = "https://github.com/blondfrogs/veil-secp256k1-wasm"
description = "Pure Rust secp256k1 cryptography for Veil blockchain with WASM bindings"

[workspace.dependencies]
# Crypto dependencies (pure Rust, no C bindings)
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# WASM dependencies
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Dev dependencies
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
strip = true         # Strip symbols
panic = "abort"      # Smaller panic handler
