[package]
name = "veil-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["veil", "secp256k1", "cryptography", "ringct", "privacy"]
categories = ["cryptography", "no-std"]

[dependencies]
# Pure Rust secp256k1 implementation (WASM compatible!)
k256 = { version = "0.13", features = ["arithmetic", "ecdh", "schnorr", "bits", "expose-field"] }

# Keep these (already pure Rust)
sha2.workspace = true
sha3.workspace = true
hex.workspace = true
serde.workspace = true
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }  # Required for WASM
hmac = "0.12"  # For RFC6979-style DRBG in range proofs

# Temporarily keep old deps commented for reference during migration
# secp256k1.workspace = true
# secp256k1-sys.workspace = true

[dev-dependencies]
serde_json.workspace = true
secp256k1-zkp = "0.11"  # For generating correct test vectors with C library
secp256k1-zkp-sys = "0.10"  # For direct FFI access to C functions

[features]
default = []
# Feature flag for test vectors
test-vectors = []
