[package]
name = "veil-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["veil", "wasm", "cryptography", "secp256k1", "privacy"]
categories = ["cryptography", "wasm"]

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
# Don't demangle function names for smaller size
demangle-name-section = false
# Don't include DWARF debug info
dwarf-debug-info = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
veil-crypto = { path = "../veil-crypto" }

hex.workspace = true

wasm-bindgen.workspace = true
js-sys.workspace = true
console_error_panic_hook.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
wasm-bindgen-test.workspace = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
